added product template

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,10 +1,10 @@
 //-- Colors
-$color1: rgba(56, 63, 81, 1);
-$color2: rgba(109, 106, 117, 1);
-$color3: rgba(191, 189, 193, 1);
-$color4: rgba(222, 184, 65, 1);
-$color5: rgba(220, 225, 233, 1);
-$transparentbg: rgba(0,0,0,.2);
+$color1: rgba(34, 45, 44, 1);
+$color2: rgba(158, 188, 158, 1);
+$color3: rgba(67, 89, 85, 1);
+$color4: rgba(109, 199, 117, 1);
+$color5: rgba(237, 237, 237, 1);
+$transparentbg: rgba(67, 89, 85, .2);
 
 //-- Fonts
 $raleway: 'Raleway', sans-serif;
@@ -37,7 +37,7 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 		ul
 			#search-bar
 				margin-top: 0 !important
-			#search
+			.search-icon
 				margin-top: 0 !important
 			li
 				a:link,a:visited
@@ -78,7 +78,7 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 		ul
 			#search-bar
 				margin-top: 15px
-				#search
+				.search-icon
 					margin-top: 15px
 			li
 				a:link,a:visited
@@ -92,7 +92,7 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 	height: 600px
 	overflow: hidden
 	background-color: $color1
-	background: url(../img/carousel/image4.jpg) center center
+	background: url(../img/carousel/image1.jpeg) center center
 	background-size: cover
 	.banner
 		position: absolute
@@ -111,6 +111,8 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 			text-align: center
 			font-size: 24px	
 			color: $color2
+			border: solid 0 #fff
+			border-radius: 10px
 			transition: all 0.4s ease
 		ul
 			list-style-type: none
@@ -129,28 +131,35 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 					line-height: 50px
 					color: $color5
 					background-color: $transparentbg
+					span
+						margin: -2px 0 0 -5px
+						.cart-number
+							text-shadow: 0 0 0 #fff
+							color: $color4
+							font-size: 14px
+							margin-top: -2px
 				a:hover,a:active
 					background-color: #fff
 					color: $color1
 					text-decoration: none
 					text-shadow: 0px 0px 0px #000
-				#search
+				.search-icon
 					position: absolute
 					height: 50px
-					width: 50px
+					width: 50px !important
 					font-size: 24px	
 					border: solid 0 #fff
 					margin-right: 15px
 					top: 10px
-					a:link, a:visited
-						color: #000
-						background-color: #fff
+					text-shadow: 0px 0px 0px #000 !important
+					color: $color1 !important
+					background-color: transparent !important
 				//-- Dropdown Menu
 				ul.menu li
 					display: none
 					float: none
 					position: relative
-					z-index: 1
+					z-index: 2
 					a:link, a:visited
 						text-align: left
 						text-shadow: 0px 0px 0px #000
@@ -241,7 +250,7 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 				font-family: $raleway
 				font-weight: 200
 //-- Content
-#content
+#content, #recommended
 	h1
 		font-family: $raleway
 		text-align: center
@@ -260,12 +269,14 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 	.content-wrapper-2
 		padding: 60px 0 60px 0
 		background-color: $color5
-		.item
-			.img
-				border: solid 3px $color5
+		h1
+			span
+				background-color: $color5
 	.content-wrapper-3
 		margin: 20px 0 20px 0
 		.sidenav
+			#accordion
+				width: 220px
 			.fixed
 				position: fixed
 				top: 80px
@@ -278,22 +289,17 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 					font-family: $raleway
 					font-size: 30px
 					font-weight: 700
-					background-color: $color2
+					background-color: $color3
 					color: #fff
 					text-align: center
 					padding: 5px 0 5px 0
 			ul
-				list-style-type: square
+				list-style-type: none
 				margin-left: 20px
 				font-size: 18px
 		.item
 			.img
-				border: solid 3px #fff
-		h1
-			span
-				background-color: $color5
-	.departments-content
-
+				border: solid 3px transparent
 	.item
 		float: left
 		padding: 0 10px 15px 10px
@@ -307,7 +313,7 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 			-webkit-transform: scale(1)		// Chrome, Safari, Moz
 		.img
 			margin: 0 0 5px 0
-			border: solid 3px #fff
+			border: solid 3px transparent
 		.info
 			.title
 			.price
@@ -319,7 +325,7 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 				margin-right: 6px
 	.item:hover
 		.img
-			border: solid 3px $color1
+			border: solid 3px $color2
 	.more
 		width: 250px
 		height: 100px
@@ -334,20 +340,49 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 			li
 				float: left
 				padding: 5px
+#content.product-view
+	padding: 40px 0 40px 0
+	.title
+		font-size: 28px
+	.price
+		font-size: 22px
+		.discount
+			font-weight: 400
+			text-decoration: line-through
+			color: #e00
+			margin-right: 6px
+	select
+		width: 150px
+		height: 50px
+	.product-details-head
+		font-weight: 700
+		font-size: 18px
+		margin: 40px 0 10px 0
+	.product-details
+		width: 80%
+		height:250px
+		font-size: 16px
+		overflow-y: scroll
+		margin: 0 0 20px 0
+	button
+		width: 250px
+		height: 50px
+#recommended
+	padding: 40px 0 40px 0
 				
 //-- Footer
 #mailing-list
 	background-color: $color3
 	padding: 20px 0 20px
-	color: #fff
+	color: $color5
 	input
 		padding: 5px 10px
 		color: #000
 #footer
-	background-color: $color2
+	background-color: $color1
 	padding: 20px 0 20px
 	h4
-		font-weight: 700
+		font-weight: 200
 		color: #fff
 	ul
 		li
@@ -355,8 +390,10 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 			a:link, a:visited
 				color: $color5
 			a:hover, a:active
-				color: $color2
+				color: $color1
 				background-color: $color5
+#copyright
+	padding: 10px 0 0 0
 	.copyright
-		color: $color5
+		color: $color1
 			
