--- a/sass/style.sass
+++ b/sass/style.sass
@@ -72,7 +72,10 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 				float: left
 				width: 150px
 				margin-left: 10px
+				font-weight: 200
 				text-align: center
+				strong
+					font-weight: 600
 	#nav
 		position: absolute !important
 		top: 10px
@@ -190,6 +193,20 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 						margin: -1px 0 0 -10px
 					a:hover, a:active
 						color: $color4
+				ul.menu li.empty
+					a:link, a:visited
+						font-size: 14px !important
+				ul.menu li.cart
+					a:link, a:visited
+						padding-left: 5px 
+						&:hover
+							color: #000 !important
+				ul.menu li.checkout-logout
+					a:link, a:visited
+						font-weight: 700
+						&:hover
+							background-color: $color2 !important
+							color: #fff
 			li:hover
 				a // keep main link selected
 					background-color: $color4 !important
@@ -218,6 +235,8 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 					0%
 						opacity: 0
 						transform: translateY(-75px)
+					50%
+						opacity: 0
 					100%
 						opacity: 1
 						transform: translateY(0)
@@ -407,20 +426,61 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 					img
 						width: 75%
 						height: auto
+						border: solid 2px #000
+						&:hover
+							border: solid 2px $color2
 				.cart-desc
 					padding: 20px 0 0 0
+					h4
+						font-weight: 700
 				.cart-items
-					padding: 40px 0 0 0
-					font-size: 24px
+					padding: 10px 0 0 0
+					font-size: 18px
+					input.update,select
+						height: 40px
+						padding: 4px
+					button.remove
+						margin-top: 5px
+						color: #000 !important
+						&:hover
+							text-decoration: none
+							color: $color2 !important
+				.subtotal
+					font:
+						size: 30px
+						weight: 700
+					span.small
+						font:
+							size: 18px
+							weight: 400
 				.cart-price
-					padding: 40px 20px 0 0
-					font-size: 24px
-				.cart-subtotal
-					font-size: 28px
+					padding: 0px 20px 0 0
+					font-size: 20px
+					span.price-red
+						font-weight: 700
+						color: #e00
+					span.price
+						font-weight: 700
+					span.discount
+						margin-right: 6px
+						font:
+							weight: 400
+							style: italic
+						text-decoration: line-through
+						color: #000
+					span.small
+						font-size: 16px
 				.cart-checkout
-					button
+					input
 						padding: 4px 15px
-						font-size: 28px
+						font:
+							size: 28px
+							weight: 700
+						background-color: $color2
+						border: solid 3px #000
+						border-radius: 2px
+						&:hover
+							background-color: $color4
 			.alt
 				background-color: $color5
 			.no-padding
@@ -444,12 +504,13 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 			padding-bottom: 10px
 			.title
 				position: relative
-				top: 5px
-			.price-red
+				top: 2px
 				font-weight: 700
+			.price-red
+				//font-weight: 700
 				color: #e00
 			.price
-				font-weight: 700
+				font-weight: 500
 			.discount
 				margin-right: 6px
 				font:
@@ -600,3 +661,51 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 					text-decoration: none
 	.copyright
 		color: #555
+
+#msg
+	position: fixed
+	bottom: 0
+	width: 100%
+	height: 60px
+	z-index: 500000 !important
+	text-align: center
+	font:
+		size: 18px
+		weight: 200
+	animation:
+		name: open
+		duration: 500ms
+		timing-function: ease-in-out
+		fill-mode: forwards
+	.alert
+		width: 100%
+		height: 100%
+		background-color: $color4
+		color: #fff
+		a
+			margin-left: 40px
+			padding: 2px 5px
+			font:
+				size: 14px
+				weight: 700
+			color: #fff
+			cursor: pointer
+			&:hover
+				text-decoration: none
+				background-color: #fff
+				color: #000
+	.error
+		background-color: #e55 !important
+		color: #fff		
+
+#msg.close
+	display: none
+@keyframes open
+	0%
+		opacity: 0
+		transform: translateY(75px)
+	50%
+		opacity: 0
+	100%
+		opacity: 1
+		transform: translateY(0)
