--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,10 +1,10 @@
 // Colors
-$color1: rgba(34, 45, 44, 1);
-$color2: rgba(158, 188, 158, 1);
-$color3: rgba(67, 89, 85, 1);
-$color4: rgba(109, 199, 117, 1);
+$color1: rgba(34, 45, 105, 1);
+$color2: rgba(158, 188, 218, 1);
+$color3: rgba(67, 89, 145, 1);
+$color4: rgba(70, 177, 201, 1);
 $color5: rgba(237, 237, 237, 1);
-$transparentbg: rgba(67, 89, 85, .75);
+$transparentbg: rgba(67, 89, 145, .75);
 
 // Fonts
 $raleway: 'Raleway', sans-serif;
@@ -87,6 +87,7 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 				margin-top: 15px
 				.search-icon
 					margin-top: 15px
+					margin-left: 400px
 			li
 				a:link,a:visited
 					background-color: rgba(0,0,0,0)
@@ -120,10 +121,10 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 			width: 400px
 			height: 50px
 			text-align: center
-			font-size: 24px	
+			font-size: 20px	
 			color: $color2
 			border: solid 0 #fff
-			border-radius: 10px
+			border-radius: 5px
 			transition: all 0.4s ease
 		ul
 			list-style-type: none
@@ -164,10 +165,11 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 					width: 50px !important
 					font-size: 24px	
 					border: solid 0 #fff
-					border-top-left-radius: 10px
-					border-bottom-left-radius: 10px
+					border-top-right-radius: 5px
+					border-bottom-right-radius: 5px
 					margin-right: 15px
 					top: 10px
+					margin-left: 350px
 					text-shadow: 0px 0px 0px #000 !important
 					color: $color1 !important
 					background-color: transparent !important
@@ -264,7 +266,7 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 				background-color: $transparentbg
 				color: #fff
 			a:hover,a:active
-				background-color: $color5
+				background-color: $color4
 				color: $color1
 		.left-arrow
 			left: 0px
@@ -273,22 +275,22 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 		.tabs
 			position: absolute
 			top: 550px
-			width: 200px
+			width: 100px
 			left: 50%
-			margin-left: -100px
+			margin-left: -50px
 			a:link,a:visited
 				float: left
-				background-color: $color3
-				//border: 2px solid $color4
+				background-color: #fff
+				//border: 2px solid #fff
 				display: block
 				width: 20px
 				height: 20px
 				//border-radius: 50%
-				margin: 5px
+				margin: 2px
 			a:hover,a:active
 				background-color: $color4
 			a.current-tab
-				background-color: #fff
+				background-color: $color3
 		.content
 			color: #fff
 			text-shadow: 0px 0px 3px $color3
@@ -436,7 +438,7 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 				.cart-items
 					padding: 10px 0 0 0
 					font-size: 18px
-					input.update,select
+					button.update,select
 						height: 40px
 						padding: 4px
 					button.remove
@@ -444,7 +446,7 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 						color: #000 !important
 						&:hover
 							text-decoration: none
-							color: $color2 !important
+							color: $color4 !important
 				.subtotal
 					font:
 						size: 30px
@@ -471,16 +473,16 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 					span.small
 						font-size: 16px
 				.cart-checkout
-					input
-						padding: 4px 15px
+					button
+						padding: 8px 30px
 						font:
 							size: 28px
 							weight: 700
-						background-color: $color2
-						border: solid 3px #000
-						border-radius: 2px
-						&:hover
-							background-color: $color4
+						//background-color: $color2
+						//border: solid 3px #000
+						//border-radius: 2px
+						//&:hover
+						//	background-color: $color4
 			.alt
 				background-color: $color5
 			.no-padding
@@ -709,3 +711,11 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 	100%
 		opacity: 1
 		transform: translateY(0)
+		
+button
+	border: solid 1px #999
+	color: #fff
+	background-color: $color5
+	&:hover
+		border: solid 1px #000
+		background-color: $color2
