--- a/sass/style.sass
+++ b/sass/style.sass
@@ -207,7 +207,7 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 					a:link, a:visited
 						font-weight: 700
 						&:hover
-							background-color: $color2 !important
+							background-color: $color4 !important
 							color: #fff
 			li:hover
 				a // keep main link selected
@@ -483,6 +483,30 @@ $sourcesans: 'Source Sans Pro', sans-serif;
 						//border-radius: 2px
 						//&:hover
 						//	background-color: $color4
+				.checkout
+					input
+						width: 100%
+						border: solid 0 #999
+						padding: 4px
+						text-align: center
+						color: #333
+						background-color: $color5
+						font-weight: 500
+					div
+						padding-bottom: 2px
+					.head
+						padding: 4px
+						font-size: 16px
+						font-weight: 700
+					.ship-method
+						input
+							width: 50px
+				.paypal
+					button
+						border: solid 0
+						&:hover
+							background-color: transparent
+					
 			.alt
 				background-color: $color5
 			.no-padding
