--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,789 +1,7 @@
-// Colors
-$color1: rgba(34, 45, 105, 1);
-$color2: rgba(158, 188, 218, 1);
-$color3: rgba(67, 89, 145, 1);
-$color4: rgba(70, 177, 201, 1);
-$color5: rgba(237, 237, 237, 1);
-$transparentbg: rgba(67, 89, 145, .75);
-
-// Fonts
-$raleway: 'Raleway', sans-serif;
-$sourcesans: 'Source Sans Pro', sans-serif;
-
-*
-	margin: 0
-	padding: 0
-	font-family: $sourcesans
-	font-weight: 400
-
-//-- Header
-#header.navbar-fixed-top
-	height: 60px !important
-	background-color: $color1
-	background-image: none
-	overflow: visible
-	.banner-small
-		display: block
-		position: absolute
-		top: 5px
-		left: 18px
-		width: 250px
-		height: 50px
-	.banner
-		display: none
-	#nav-info
-		opacity: 0 !important
-	#nav
-		position: absolute
-		top: -5px !important
-		input
-			width: 400px
-			color: $color2
-		ul
-			#search-bar
-				margin-top: 0 !important
-			.search-icon
-				margin-top: 0 !important
-			li
-				a:link,a:visited
-					background-color: rgba(0,0,0,0)
-				a:hover,a:active
-					background-color: #fff
-	#carousel
-		display: none
-#header.normal
-	height: 120px
-	background-color: $color1
-	background-image: none
-	.banner
-		top: 10px
-		left: 40px
-		width: 200px
-		height: 100px
-	#nav-info
-		position: absolute
-		right: 40px
-		top: 70px
-		color: #fff
-		opacity: 1
-		ul
-			list-style-type: none
-			li
-				float: left
-				width: 150px
-				margin-left: 10px
-				font-weight: 200
-				text-align: center
-				strong
-					font-weight: 600
-	#nav
-		position: absolute !important
-		top: 10px
-		input
-			width: 450px
-			color: $color2
-		ul
-			#search-bar
-				margin-top: 15px
-				.search-icon
-					margin-top: 15px
-					margin-left: 400px
-			li
-				a:link,a:visited
-					background-color: rgba(0,0,0,0)
-				a:hover,a:active
-					background-color: #fff
-	#carousel
-		display: none
-	
-#header
-	height: 600px
-	overflow: hidden
-	background-color: $color1
-	.banner-small
-		display: none
-	.banner
-		display: block
-		position: absolute
-		top: 10px
-		left: 20px
-		width: 300px
-		height: auto
-	
-	//-- Nav
-	#nav
-		position: fixed
-		top: 20px
-		right: 40px
-		transition: all 250ms ease-in-out
-		z-index: 5 !important
-		input
-			width: 400px
-			height: 50px
-			text-align: center
-			font-size: 20px	
-			color: $color2
-			border: solid 0 #fff
-			border-radius: 5px
-			transition: all 0.4s ease
-		ul
-			list-style-type: none
-			#search-bar:hover
-				.search-icon
-					position: absolute !important
-			li
-				float: left
-				padding-left: 10px
-				a:link,a:visited
-					display: block
-					text-align: center
-					font-size: 24px	
-					font-weight: 900
-					font-family: $raleway
-					text-shadow: 0px 0px 3px $color1
-					width: 150px
-					height: 50px
-					line-height: 50px
-					color: $color5
-					background-color: $transparentbg
-
-					span
-						margin: -2px 0 0 -5px
-						.cart-number
-							text-shadow: 0 0 0 #fff
-							color: $color4
-							font-size: 14px
-							margin-top: -2px
-				a:hover,a:active
-					background-color: #fff
-					color: $color1
-					text-decoration: none
-					text-shadow: 0px 0px 0px #000
-				.search-icon
-					position: absolute
-					height: 50px
-					width: 50px !important
-					font-size: 24px	
-					border: solid 0 #fff
-					border-top-right-radius: 5px
-					border-bottom-right-radius: 5px
-					margin-right: 15px
-					top: 10px
-					margin-left: 350px
-					text-shadow: 0px 0px 0px #000 !important
-					color: $color1 !important
-					background-color: transparent !important
-					&:hover
-						position: absolute !important
-				//-- Dropdown Menu
-				ul.menu li
-					display: none
-					float: none
-					position: relative
-					z-index: 100
-					a:link, a:visited
-						text-align: left
-						text-shadow: 0px 0px 0px #000
-						text-indent: 10px
-						font-size: 16px	
-						font-weight: 300	
-						width: 150px
-						height: 50px
-						line-height: 50px
-						background-color: #fff !important
-						color: $color1
-						margin: -1px 0 0 -10px
-					a:hover, a:active
-						color: $color4
-				ul.menu li.empty
-					a:link, a:visited
-						font-size: 14px !important
-				ul.menu li.cart
-					a:link, a:visited
-						padding-left: 5px 
-						&:hover
-							color: #000 !important
-				ul.menu li.checkout-logout
-					a:link, a:visited
-						font-weight: 700
-						&:hover
-							background-color: $color4 !important
-							color: #fff
-			li:hover
-				a // keep main link selected
-					background-color: $color4 !important
-					color: #fff
-					text-shadow: 0 0 0 #000
-					z-index: 5
-					position: relative
-				ul
-					transition: all 1.5s ease
-					-webkit-box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.5);
-					-moz-box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.5);
-					box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.5);
-				ul.menu li
-					display: block				
-					//opacity: 0
-					
-					@for $i from 1 through 6
-						&:nth-child(#{$i})
-							animation:
-								name: submenu
-								duration: 150ms * $i
-								timing-function: ease-in-out
-								fill-mode: forwards
-						
-				@keyframes submenu
-					0%
-						opacity: 0
-						transform: translateY(-75px)
-					50%
-						opacity: 0
-					100%
-						opacity: 1
-						transform: translateY(0)
-	//-- Carousel
-	#carousel
-		width: 100%
-		height: 600px
-		background-size: cover !important
-		background-position: center center
-		font-family: $raleway
-		z-index: 0 !important
-		transition: all 800ms linear
-		.left-arrow, .right-arrow
-			font-size: 30px
-			line-height: 50px
-			width: 50px
-			height: 50px
-			position: absolute
-			display: block
-			top: 275px
-			a:link,a:visited
-				display: block
-				width: 50px
-				height: 50px
-				background-color: $transparentbg
-				color: #fff
-			a:hover,a:active
-				background-color: $color4
-				color: $color1
-		.left-arrow
-			left: 0px
-		.right-arrow
-			right: 0px
-		.tabs
-			position: absolute
-			top: 550px
-			width: 100px
-			left: 50%
-			margin-left: -50px
-			a:link,a:visited
-				float: left
-				background-color: #fff
-				//border: 2px solid #fff
-				display: block
-				width: 20px
-				height: 20px
-				//border-radius: 50%
-				margin: 2px
-			a:hover,a:active
-				background-color: $color4
-			a.current-tab
-				background-color: $color3
-		.content
-			color: #fff
-			text-shadow: 0px 0px 3px $color3
-			position: absolute
-			font-size: 32px
-			//text-align: right
-			bottom: 50%
-			width: 800px
-			left: 50%
-			top: 250px
-			margin-left: -400px
-			display: none
-			span
-				background-color: $transparentbg
-				padding: 4px 10px
-				margin: 5px
-				font-weight: 200
-				font-family: $raleway
-			strong
-				font-family: $raleway
-				font-weight: 900
-			i
-				font-family: $raleway
-				font-weight: 200
-//-- Header Media Queries
-@media (max-width: 1000px)
-	#header
-		#nav
-			#search-bar
-				display: none // Remove search bar
-		#carousel
-			.left-arrow, .right-arrow // Carousel arrows get smaller
-				width: 40px
-				height: 40px
-				font-size: 20px
-				line-height: 40px
-				a:link,a:visited
-					width: 40px
-					height: 40px
-			.content // resize width of content
-				width: 500px
-				margin-left: -250px
-				font-size: 26px
-@media (max-width: 835px)
-	#header
-		#nav
-			display: none // Remove regular nav
-		#nav-info
-			display: none // and nav info
-		#nav-mobile // Show mobile nav
-			display: block
-@media (max-width: 600px)
-	#header.navbar-fixed-top
-		.banner-small
-			top: 12px
-			width: 220px
-			height: auto
-	#header
-		.banner
-			width: 200px // Logo on home page gets smaller
-		#carousel
-			.left-arrow, .right-arrow // Remove carousel arrows
-				display: none
-			.content // resize carousel content
-				width: 100%
-				margin-left: 0
-				left: 0%
-				font-size: 20px
-//-- Content
-#content, #recommended
-	font-size: 18px
-	h1
-		font-family: $raleway
-		text-align: center
-		border-bottom: 3px solid $color2
-		line-height: 0
-		padding: 0
-		margin: 10px 0 30px 0
-		text-transform: uppercase
-		letter-spacing: 2px
-		color: $color2
-		span
-			background-color: #fff
-			padding: 0 15px
-	.content-wrapper-1
-		padding: 60px 0 60px 0
-	.content-wrapper-2
-		padding: 60px 0 60px 0
-		background-color: $color5
-		h1
-			span
-				background-color: $color5
-	.content-wrapper-3
-		margin: 20px 0 20px 0
-		.panel-content
-			font-size: 16px
-			#shop-panel
-				width: 100%
-				h2
-					font-family: $raleway
-					font-size: 24px
-					font-weight: 700
-					background-color: $color3
-					color: #fff
-					text-align: center
-					text-transform: capitalize
-					padding: 5px 0 5px 0
-				li
-					a
-						position: relative
-						left: -10px
-						color: $color3
-						text-transform: capitalize
-					.product-count
-						position: relative
-						left: -10px
-						background-color: $color2
-						color: #fff
-						padding: 0 5px
-			.fixed
-				position: fixed
-				top: 80px
-				width: 300px
-				transition: all 0.4s ease
-			ul
-				list-style-type: none
-				margin-left: 30px
-				margin-top: 10px
-				font-size: 18px
-				li.current-page
-					background-color: $color5
-					font-weight: bold
-					border-radius: 3px
-				li.name
-					font-weight: bold
-		.item
-			.img
-				border: solid 3px transparent
-		.main-content
-			.product-list
-				span.label
-					position: absolute
-					width: 50%
-					left: 25%
-					height: 35px
-					line-height: 15px
-					bottom: 35px
-					padding: 10px
-					border-radius: 0px
-					font-weight: 900
-					font-size: 20px
-					background-color: $color2
-					text-transform: capitalize
-				.item:hover
-					span.label
-						background-color: $color2
-			.breadcrumb-item
-				text-transform: capitalize
-				a:link, a:visited
-					font-weight: bold
-					color: $color2
-			// Cart
-			.cart
-				padding: 20px 0 20px 0
-				border-radius: 3px
-				font-size: 16px
-				hr
-					border-top: solid 1px $color5
-				.cart-head
-					margin: 0 0 5px 0
-					padding: 5px
-					padding-right: 20px
-					font:
-						weight: bold
-						size: 18px
-					background-color: $color3
-					color: #fff
-				.cart-img
-					img
-						width: 75%
-						height: auto
-						border: solid 2px #000
-						&:hover
-							border: solid 2px $color2
-				.cart-desc
-					padding: 20px 0 0 0
-					h4
-						font-weight: 700
-				.cart-items
-					padding: 10px 0 0 0
-					font-size: 18px
-					button.update,select
-						height: 40px
-						padding: 4px
-					button.remove
-						margin-top: 5px
-						color: #000 !important
-						&:hover
-							text-decoration: none
-							color: $color4 !important
-				.subtotal
-					font:
-						size: 30px
-						weight: 700
-					span.small
-						font:
-							size: 18px
-							weight: 400
-				.cart-price
-					padding: 0px 20px 0 0
-					font-size: 20px
-					span.price-red
-						font-weight: 700
-						color: #e00
-					span.price
-						font-weight: 700
-					span.discount
-						margin-right: 6px
-						font:
-							weight: 400
-							style: italic
-						text-decoration: line-through
-						color: #000
-					span.small
-						font-size: 16px
-				.cart-checkout
-					button
-						padding: 8px 30px
-						font:
-							size: 28px
-							weight: 700
-						//background-color: $color2
-						//border: solid 3px #000
-						//border-radius: 2px
-						//&:hover
-						//	background-color: $color4
-				.checkout
-					input
-						width: 100%
-						border: solid 0 #999
-						padding: 4px
-						text-align: center
-						color: #333
-						background-color: $color5
-						font-weight: 500
-					div
-						padding-bottom: 2px
-					.head
-						padding: 4px
-						font-size: 16px
-						font-weight: 700
-					.ship-method
-						input
-							width: 50px
-				.paypal
-					button
-						border: solid 0
-						&:hover
-							background-color: transparent
-					
-			.alt
-				background-color: $color5
-			.no-padding
-				padding: 0
-			.info-row
-				margin: 2px 0 6px 0
-	.item
-		float: left
-		padding: 0 10px 15px 10px
-		//transition: all 0.4s ease-in-out
-		a
-			text-decoration: none
-			color: #000
-		.img
-			img
-				width: 100%
-				height: auto
-				margin: 0 auto
-				border: solid 3px transparent
-		.info
-			padding-bottom: 10px
-			.title
-				position: relative
-				top: 2px
-				font-weight: 700
-			.price-red
-				//font-weight: 700
-				color: #e00
-			.price
-				font-weight: 500
-			.discount
-				margin-right: 6px
-				font:
-					weight: 400
-					style: italic
-				text-decoration: line-through
-				color: #000
-		&:hover
-			.img
-				img
-					border: solid 3px $color2
-			.info
-				background-color: $color2
-	.more // more div: home page-- not using
-		position: relative
-		left: 50%
-		float: left
-		width: 250px
-		height: 100px
-		margin-left: -125px
-		background-color: #eee
-		ul
-			list-style-type: none
-			margin: 0 auto
-			li
-				float: left
-				padding: 5px
-#content.product-view // Product Page
-	padding: 40px 0 40px 0
-	.product-img
-		img
-			width: 450px
-			height: auto
-	.title
-		font-size: 28px
-	.info
-		padding-bottom: 20px
-		font-size: 22px
-		.price-red
-			font-weight: 700
-			color: #e00
-		.price
-			font-weight: 700
-		.discount
-			margin-right: 6px
-			font:
-				weight: 400
-				style: italic
-			text-decoration: line-through
-			color: #000
-	select
-		width: 150px
-		height: 50px
-	.product-details-head
-		margin: 40px 0 10px 0
-		font:
-			weight: 700
-			size: 18px
-	.product-details
-		width: 80%
-		height:250px
-		margin: 0 0 20px 0
-		font-size: 16px
-		overflow-y: scroll
-	button
-		width: 250px
-		height: 50px
-		
-#recommended
-	padding: 40px 0 40px 
-	
-//-- Login
-#login
-	padding: 50px 0
-	background-color: $color5
-	.login-box
-		position: relative
-		left: 50%
-		width: 450px
-		margin-left: -225px
-		padding: 20px
-		border: solid 1px $color3
-		border-radius: 3px
-		background-color: #fff
-		input
-			width: 300px
-			height: 50px
-			font-size: 24px
-			margin-bottom: 2px
-			padding: 10px
-			border: solid 1px $color3
-			border-radius: 3px
-			margin: 0 auto
-			position: relative
-			display: block
-		input.submit
-			height: 50px
-			&:hover
-				background-color: $color2
-				
-//-- Footer
-#mailing-list
-	padding: 15px 0 15px
-	background-color: $color3
-	color: $color5
-	font-size: 20px
-	p
-		margin: 5px 0 0 0
-		font-weight: 200
-	input
-		position: relative
-		left: 0px
-		padding: 5px 10px
-		color: #000
-		border: solid 0 #fff
-		border-radius: 2px
-	.email
-		width: 250px
-	.join
-		width: 100px
-		&:hover
-			background-color: $color2
-#footer
-	padding: 20px 0 20px
-	background-color: $color1
-	h4
-		font-weight: 200
-		color: #fff
-	ul
-		li
-			color: $color5
-			a:link, a:visited
-				color: $color5
-				&:hover, &:active
-					color: $color1
-					background-color: $color5
-#copyright
-	padding: 10px 0 10px 0
-	ul
-		list-style-type: none
-		li
-			float: left
-			padding: 5px
-			a:link, a:visited
-				color: #555
-				&:hover
-					color: $color2
-					text-decoration: none
-	.copyright
-		color: #555
-
-#msg
-	position: fixed
-	bottom: 0
-	width: 100%
-	height: 60px
-	z-index: 500000 !important
-	text-align: center
-	font:
-		size: 18px
-		weight: 200
-	animation:
-		name: open
-		duration: 500ms
-		timing-function: ease-in-out
-		fill-mode: forwards
-	.alert
-		width: 100%
-		height: 100%
-		background-color: $color4
-		color: #fff
-		a
-			margin-left: 40px
-			padding: 2px 5px
-			font:
-				size: 14px
-				weight: 700
-			color: #fff
-			cursor: pointer
-			&:hover
-				text-decoration: none
-				background-color: #fff
-				color: #000
-	.error
-		background-color: #e55 !important
-		color: #fff		
-
-#msg.close
-	display: none
-@keyframes open
-	0%
-		opacity: 0
-		transform: translateY(75px)
-	50%
-		opacity: 0
-	100%
-		opacity: 1
-		transform: translateY(0)
-		
-button
-	border: solid 1px #999
-	color: #fff
-	background-color: $color5
-	&:hover
-		border: solid 1px #000
-		background-color: $color2
+@import vars
+@import general
+@import header
+@import carousel
+@import content
+@import login
+@import footer
