--- a/sass/_cart.sass
+++ b/sass/_cart.sass
@@ -31,9 +31,12 @@
 					padding: 10px 0 0 0
 					font-size: 18px
 					input.update
-						width: 20px
+						width: 30px
 						height: 40px
 						text-align: center
+					input.update::-webkit-inner-spin-button,input.update::-webkit-outer-spin-button
+						-webkit-appearance: none
+						margin: 0 
 					button.update,select
 						height: 40px
 						padding: 4px
