Added styling for local cart when logged in.

--- a/sass/_cart.sass
+++ b/sass/_cart.sass
@@ -28,8 +28,12 @@
 					h4
 						font-weight: 700
 				.cart-items
-					padding: 10px 0 0 0
+					padding: 10px 0 0 20px
 					font-size: 18px
+					.update-field
+						width: 50px
+						height: 40px
+						text-align: center
 					input.update
 						width: 30px
 						height: 40px
@@ -71,6 +75,24 @@
 						color: #000
 					span.small
 						font-size: 16px
+				.local-cart-item
+					position: relative
+					float: left
+					list-style-type: none
+					margin: 10px
+				.sync
+					clear: left
+					padding: 20px
+					font-weight: 600
+					background-color: $color5
+					.options
+						margin: 0 0 0 20px
+						button
+							padding: 5px
+							margin: 2px
+							border: solid 2px #000
+							border-radius: 2px
+							font-weight: 600
 				.cart-checkout
 					button
 						padding: 8px 30px
