--- a/sass/_cart.sass
+++ b/sass/_cart.sass
@@ -1,6 +1,10 @@
 #content
 	.content-wrapper-3
 		.main-content
+			.alt
+				background-color: #fff
+				&:nth-child(odd)
+					background-color: $color5
 			.cart
 				padding: 20px 0 20px 0
 				border-radius: 3px
@@ -16,6 +20,8 @@
 						size: 18px
 					background-color: $color3
 					color: #fff
+					a
+						color: #fff
 				.cart-img
 					img
 						width: 75%
@@ -115,6 +121,8 @@
 						font-weight: 500
 					div
 						padding-bottom: 2px
+					.space
+						margin: 30px 0 0 0
 					.head
 						padding: 4px
 						font-size: 16px
@@ -122,7 +130,30 @@
 					.ship-method
 						input
 							width: 50px
+					.same_as
+						width: 50px
+					.summary
+						margin: 50px 0 20px 0
+						padding: 0
+						background-color: $color5
+						font-size: 20px
+						p
+							padding: 2px 25px
+						h2
+							padding: 8px 25px
+							margin: 0px 0px 10px 0px
+							font-size: 30px
+							font-weight: 900
+							background-color: $color3
+							color: #fff
+						.total
+							margin: 0
+							padding: 10px 25px
+							font-weight: 900px
+							background-color: #888
+							color: #fff
 				.paypal
+					margin: 30px 0
 					button
 						border: solid 0
 						&:hover
